--- a/app/templates/main/profile.html
+++ b/app/templates/main/profile.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../static/css/styles.css">
   </head>
   <body>
     <div class="bg-orb orb-1"></div>
@@ -20,7 +20,7 @@
     <div class="bg-orb orb-3"></div>
 
     <header class="position-sticky top-0 z-3 shadow-none bg-translucent backdrop-blur-sm">
-    <nav class="navbar navbar-expand-lg py-3">
+      <nav class="navbar navbar-expand-lg py-3">
         <div class="container-xxl">
           <a class="navbar-brand d-flex align-items-center gap-2" href="{% url 'home' %}">
             <span class="brand-mark rounded-3 d-inline-flex align-items-center justify-content-center">
@@ -33,9 +33,7 @@
           </button>
           <div class="collapse navbar-collapse" id="mainNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center gap-lg-2">
-              <li class="nav-item"><a class="nav-link" href="#new">New</a></li>
               <li class="nav-item"><a class="nav-link" href="#trending">Trending</a></li>
-              <li class="nav-item"><a class="nav-link" href="#categories">Categories</a></li>
               <li class="nav-item"><a class="nav-link" href="#newsletter">Newsletter</a></li>
               <li class="nav-item"><a class="nav-link" href="{% url 'shop' %}">Shop</a></li>
               <li class="nav-item"><a class="nav-link" href="{% url 'cart' %}">Cart</a></li>
@@ -231,7 +229,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+       <script src="../../static/js/app.js"></script>
+
     <!-- Chicku chatbot UI -->
     <button id="chickuLauncher" class="chicku-launcher"><i class="fa-solid fa-robot"></i><span class="d-none d-sm-inline">Chat with Chicku</span></button>
     <div id="chickuPanel" class="chicku-panel" aria-hidden="true" role="dialog" aria-modal="true">
